--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,23 @@
 body{
+    margin: 0;
     font-family: Arial;
-    background-color: lightgrey;
+    background-color: #f5f5f5;
 }
 
 #logo{
     height: 50px;
     vertical-align: middle;
+    margin-left: 10px;
 }
 
 header{
     background-color: white;
+    margin:0;
 }
 
+hr{
+    color: lightgrey;
+}
 
 .add-task{
     background-color: lightskyblue;
@@ -29,7 +35,7 @@ header{
 .editorial{
     background-color: lightskyblue;
     border: 0;
-    border-radius: 20px;
+    border-radius: 30px;
     color: white;
 }
 
@@ -76,7 +82,7 @@ h1{
 }
 
 main{
-    width: 80%;
+    width: 60%;
     background-color: white;
     margin: 0 auto;
     padding: 20px;
@@ -85,4 +91,36 @@ main{
 
 #list{
     line-height: 40px;
+}
+
+.spunta{
+    height: 10px;
+    width: 10px;
+    color: green;
+    padding: 1px 3px;
+    border-style: solid;
+    border-color: green;
+    border-radius: 50%;
+    border-width: 1px;
+    margin-right: 6px;
+    margin-left: 4px;
+    font-size: 10px;
+    text-align: center;
+    line-height: 10px;
+}
+
+.x-rossa{
+    height: 10px;
+    width: 10px;
+    color: red;
+    padding: 1px 3px;
+    border-style: solid;
+    border-color: red;
+    border-radius: 50%;
+    border-width: 1px;
+    margin-right: 6px;
+    margin-left: 4px;
+    font-size: 10px;
+    text-align: center;
+    line-height: 10px;
 }
